--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container animate__animated animate__swing">
-        <h1>To-Do App 😎</h1>
+        <h1>Today-Task😎</h1>
         <input type="text" name="" id="inp" onkeypress="click(event)" placeholder="enter your today routine">
         <button id="btn">Add</button>
         <ul id="list"></ul>
